list(APPEND tests
  add-finalizer
  add-teardown-callback
  add-teardown-callback-deferred
  add-teardown-callback-deferred-remove
  add-teardown-callback-multiple
  add-teardown-callback-remove
  add-type-tag
  add-type-tag-delegate
  adjust-external-memory
  atomics-wait-timeout
  atomics-wait-timeout-notify
  call-function
  call-function-ignore-return
  call-function-in-context
  call-function-microtask
  call-function-microtask-nested
  call-function-throw
  call-function-with-checkpoint
  call-threadsafe-function-after-release
  call-threadsafe-function-with-data
  coerce-number-to-string
  coerce-object-to-string
  coerce-string-to-number
  coerce-symbol-to-string
  coerce-to-boolean
  coerce-to-object
  create-arraybuffer
  create-arraybuffer-too-large
  create-arraybuffer-with-backing-store
  create-bigint-int64
  create-bigint-words
  create-dataview
  create-date
  create-date-nan
  create-date-overflow
  create-delegate
  create-delegate-delete-throw
  create-delegate-get-throw
  create-delegate-get-without-has
  create-delegate-has-throw
  create-delegate-keys-throw
  create-delegate-set-throw
  create-env
  create-env-multiple
  create-env-multiple-concurrent
  create-env-multiple-isolated
  create-env-multiple-microtask
  create-external
  create-external-arraybuffer
  create-external-arraybuffer-with-finalizer
  create-external-arraybuffer-with-finalizer-detach
  create-external-sharedarraybuffer
  create-external-string-latin1
  create-external-string-latin1-with-finalizer
  create-external-string-utf8
  create-external-string-utf8-with-finalizer
  create-external-string-utf16le
  create-external-string-utf16le-with-finalizer
  create-external-with-finalizer
  create-function
  create-function-args-extra
  create-function-args-fewer
  create-function-return-double
  create-function-throw
  create-function-throw-indirect
  create-function-with-finalizer
  create-function-with-source
  create-int64
  create-module-import-missing
  create-object-with-prototype
  create-object-with-properties
  create-promise-reject
  create-promise-resolve
  create-property-key
  create-reference-array
  create-reference-bigint
  create-reference-boolean
  create-reference-function
  create-reference-null
  create-reference-number
  create-reference-object
  create-reference-object-multiple
  create-reference-object-weak
  create-reference-string
  create-reference-symbol
  create-reference-undefined
  create-sharedarraybuffer
  create-sharedarraybuffer-with-backing-store
  create-string-latin1
  create-string-utf8
  create-string-utf8-with-null
  create-string-utf16le
  create-threadsafe-function
  create-threadsafe-function-with-callback
  create-threadsafe-function-with-context
  create-threadsafe-function-with-finalizer
  create-typed-errors
  create-typed-function
  create-typed-function-no-jit
  create-typed-function-with-arraybuffer
  create-typed-function-with-bigint64
  create-typed-function-with-biguint64
  create-typed-function-with-dataview
  create-typed-function-with-finalizer
  create-typed-function-with-int8array
  create-typed-function-with-int32
  create-typed-function-with-int64
  create-typed-function-with-number
  create-typed-function-with-pointer
  create-typed-function-with-receiver
  create-typed-function-with-string-latin1
  create-typed-function-with-string-utf16le
  create-typed-function-with-uint8array
  create-typed-function-with-uint32
  create-typed-function-with-uint64
  create-uint8array
  create-unsafe-arraybuffer
  create-unsafe-sharedarraybuffer
  define-class
  define-class-with-method
  define-class-with-static-method
  define-class-with-static-value
  define-class-with-symbol-property
  define-class-with-value
  define-properties
  delete-element
  delete-property
  dynamic-import
  dynamic-import-with-promise
  dynamic-import-with-referrer
  dynamic-import-with-referrer-function
  dynamic-import-with-referrer-multiple-scripts
  dynamic-import-with-referrer-prepared-and-script
  dynamic-import-with-referrer-script
  dynamic-import-without-handler
  escapable-handle-scope
  fatal-exception
  garbage-collection-tracking
  get-array-elements
  get-arraybuffer-info
  get-bindings
  get-dataview-info
  get-env-loop
  get-env-platform
  get-error-location
  get-filtered-property-names
  get-heap-space-statistics
  get-heap-statistics
  get-module-name
  get-new-target
  get-platform-identifier
  get-platform-limits
  get-platform-loop
  get-platform-version
  get-property-missing
  get-prototype
  get-sharedarraybuffer-info
  get-typedarray-info-uint16array
  get-typedarray-info-uint16array-large
  get-typedarray-info-uint8array
  get-typedarray-info-uint8array-large
  get-typedarray-info-uint8array-with-offset
  get-value-bigint-uint64
  get-value-int32-int64
  get-value-string-utf8
  get-value-string-utf8-length
  get-value-string-utf8-no-null
  has-element
  has-own-property
  has-property
  import-meta
  import-meta-throw
  inspector
  inspector-attach-context
  inspector-multiple-debugger-enable
  inspector-pause
  is-arguments
  is-array
  is-arraybuffer
  is-bigint64array
  is-biguint64array
  is-dataview
  is-date
  is-detached-arraybuffer
  is-error
  is-external
  is-float16array
  is-float32array
  is-float64array
  is-generator
  is-int8array
  is-int16array
  is-int32array
  is-int32-uint32
  is-map
  is-map-iterator
  is-module-namespace
  is-promise
  is-proxy
  is-regexp
  is-set
  is-set-iterator
  is-sharedarraybuffer
  is-typedarray
  is-uint8array
  is-uint8clampedarray
  is-uint16array
  is-uint32array
  is-weak-map
  is-weak-ref
  is-weak-set
  many-large-allocs
  many-small-allocs
  prepare-script
  prepare-script-id
  prepare-script-ignore-return
  prepare-script-in-context
  prepare-script-multiple-contexts
  prepare-script-run-multiple
  prepare-script-syntax-error
  prepare-script-throw
  promise-rejection
  promise-rejection-unhandled
  promise-rejection-unhandled-reentrant
  promise-rejection-unhandled-reentrant-deferred
  queue-microtask
  queue-microtask-with-callback
  reference-unref
  run-module
  run-module-async
  run-module-cyclic-import
  run-module-double-nested-import
  run-module-in-context
  run-module-nested-import
  run-module-throw
  run-script
  run-script-ignore-return
  run-script-in-context
  run-script-throw
  set-array-elements
  set-named-property
  set-property
  set-prototype
  symbol-for
  terminate-execution
  threadsafe-function-context-acquire
  threadsafe-function-ref-unref
  threads
  threads-platform-loop
  throw-error
  throw-error-formatted
  throw-range-error
  throw-reference-error
  throw-syntax-error
  throw-type-error
  typeof-bigint
  typeof-boolean
  typeof-external
  typeof-function
  typeof-null
  typeof-number
  typeof-object
  typeof-string
  typeof-symbol
  typeof-undefined
  wasm
  wasm-async
  wasm-async-io
  wasm-async-io-multiple
  wrap
  wrap-remove-with-finalizer
  wrap-with-finalizer
  wrap-with-reference
)

foreach(test IN LISTS tests)
  add_executable(${test} ${test}.c helpers.h)

  target_link_libraries(
    ${test}
    PRIVATE
      js_shared
  )

  add_test(
    NAME ${test}
    COMMAND ${test}
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
  )

  set_tests_properties(
    ${test}
    PROPERTIES
    TIMEOUT 30
  )

  if(${test} IN_LIST skipped_tests)
    set_tests_properties(
      ${test}
      PROPERTIES
      DISABLED ON
    )
  endif()
endforeach()
